# PalmSecret_Jetpack

./: .gitignore  build-config.txt  build-mail.sh  build-replace.sh  build.gradle  config.gradle  gradle.properties  readme  settings.gradle
app/: build.gradle  google-services.json  proguard-rules.pro
baselib/: build.gradle  proguard-rules.pro
lib_utils/: build.gradle
module_ad/: build.gradle
module_camera/: build.gradle
module_cnt/: build.gradle
module_face/: build.gradle
module_google/: build.gradle  google-services.json  proguard-rules.pro
module_home/: .gitignore  (+1 more)
module_stasm/: CMakeLists.txt  build.gradle
module_stasm/src/main/: AndroidManifest.xml
module_stasm/src/main/cpp/: checkApp.cpp  des_jni.cpp  mls-jni.cpp  opencv_utility.cpp  stasm-face-detection-jni.cpp
module_stasm/src/main/cpp/include/: MovingLeastSquare.h  Treble_DES.h  checkApp.h  compiler.h  loginfo.h  mls-jni.h  opencv_utility.h
module_stasm/src/main/java/com/palmapp/master/: InterpreterHelper.java  InterpreterJNI.java
module_stasm/src/main/java/com/picstudio/photoeditorplus/stasm/: MlsUtils.java  OpenGlUtils.java  RotatedRectF.java  StasmFaceDetectionSdk.java  Utils.java
module_stasm/src/main/java/com/picstudio/photoeditorplus/stasm/renderer/: BigEyeRenderer.java  ColorInfo.java  GLMaskRenderer.java  SlimeFaceRenderer.java
module_stasm/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCameraView.java
module_stasm/src/main/java/org/opencv/imgproc/: Imgproc.java
module_stasm/src/main/res/values/: attrs.xml  strings.xml
(+956 files in other folders)
